<resources>
    <string name="app_name">Dos</string>

    <string name="textview_text_message">Datos de ingreso al sistema</string>
    <string name="edittext_hint_username">Ingrese en el usuario</string>
    <string name="edittext_hint_password">Ingrese la clave</string>

    <string name="button_text_ok">Aceptar</string>

    <string name="textView_text_title">Bienvenido</string>

    <string name="buttonShowBrowser_text" translatable="false">Mostrar Navegador</string>
    <string name="buttonCallPhone_text" translatable="false">Hacer Llamada</string>
    <string name="buttonShowListNumbers_text" translatable="false">Mostrar lista de Números</string>
    <string name="buttonFinish_text" translatable="false">Finalizar</string>

    <string name= "textView_text_listNumbers" translatable="false">Lista de valores</string>

    <string name= "menu_file" translatable="false">Archivo</string>
    <string name= "menu_about" translatable="false">Acerca de...</string>

    <string name= "menu_edit" translatable="false">Editar</string>
    <string name= "menu_edit_cut" translatable="false">Cortar</string>
    <string name= "menu_edit_copy" translatable="false">Copiar</string>
    <string name= "menu_edit_paste" translatable="false">Pegar</string>

    <string name= "menu_options" translatable="false">Opciones</string>
    <string name= "menu_options_finish" translatable="false">Finalizar</string>

</resources>