<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_text_title"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonShowBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonShowBrowser"
        android:text="@string/buttonShowBrowser_text" />

    <Button
        android:id="@+id/buttonCallPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonCallPhone"
        android:text="@string/buttonCallPhone_text" />

    <Button
        android:id="@+id/buttonShowListNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_buttonShowListNumber"
        android:text="@string/buttonShowListNumbers_text" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonFinish_text" />
</LinearLayout>