<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_message"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_hint_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_hint_password"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>